--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,20 +91,6 @@ body {
   color: #fff;
 }
 
-.background-line-right {
-  background-image: url("../images/bg-line.jpg");
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: 400px 100%;
-}
-
-.background-line-left {
-  background-image: url("../images/bg-line.jpg");
-  background-repeat: no-repeat;
-  background-position: left;
-  background-size: 400px 100%;
-}
-
 .header__wrapper {
   background-color: #f4f4f4;
 }
@@ -119,51 +105,26 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.header__inner {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.header__logo {
-  margin-right: 20px;
-}
-
 .header__top {
-  position: relative;
-  z-index: 1;
-  height: 60px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 20px 0;
-}
-
-.header__top-img {
-  position: absolute;
-  top: 0;
-  right: -100%;
-  left: -8%;
-  bottom: 0;
-  z-index: -1;
-}
-
-.header__top-img img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-  -o-object-position: left bottom;
-  object-position: left bottom;
+  background-color: #f4f4f4;
 }
 
 .header__bottom {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 20px 0;
 }
 
 .header__menu {
+  margin-right: 50px;
+}
+
+.header__socials {
   margin-right: 50px;
 }
 
@@ -180,7 +141,6 @@ body {
 .socials {
   display: flex;
   align-items: center;
-  margin-right: 50px;
 }
 
 .socials__item {
@@ -272,20 +232,59 @@ body {
 
 .menu__list li {
   margin-right: 40px;
+  font-weight: 500;
+  font-size: 17px;
+  transition: color linear 0.2s;
 }
 
 .menu__list li:last-child {
   margin-right: 0;
 }
 
-.menu__list li a {
-  font-weight: 500;
-  font-size: 17px;
-  transition: color linear 0.2s;
+.menu__list li:hover {
+  color: #0AD574;
 }
 
-.menu__list li a:hover {
-  color: #0AD574;
+.burger {
+  margin-left: 20px;
+  position: relative;
+  display: none;
+  width: 20px;
+  height: 16px;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.burger:before,
+.burger::after {
+  content: "";
+}
+
+.burger span,
+.burger:before,
+.burger::after {
+  display: block;
+  position: absolute;
+  right: 0;
+  width: 20px;
+  height: 3px;
+  background: linear-gradient(176.3deg, #0AD574 3.03%, #00A556 71.86%);
+  border-radius: 5px;
+}
+
+.burger span {
+  top: 50%;
+  width: 25px;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.burger:before {
+  top: 0;
+}
+
+.burger::after {
+  bottom: 0;
 }
 
 .intro {
@@ -307,6 +306,8 @@ body {
   height: 100%;
   -o-object-fit: cover;
   object-fit: cover;
+  -o-object-position: bottom;
+  object-position: bottom;
 }
 
 .intro__inner {
@@ -353,18 +354,36 @@ body {
   margin-bottom: 0;
 }
 
+.about__img-mobile {
+  display: none;
+  text-align: center;
+  padding-bottom: 40px;
+  overflow: hidden;
+  background-image: url("../images/about/bg-gray-mobile.jpg");
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: 100% auto;
+}
+
+.about__img-mobile img {
+  width: 90%;
+  height: auto;
+  max-width: 100%;
+  border-radius: 5px 5px 120px 5px;
+}
+
 .about__quote {
   margin-bottom: 30px;
   padding: 30px;
-  line-height: 1.7;
   font-size: 18px;
-  font-weight: 500;
   background: linear-gradient(180deg, rgb(221, 222, 222), rgba(255, 255, 255, 0));
 }
 
 .about__quote-text {
   display: block;
   margin-bottom: 25px;
+  line-height: 1.7;
+  font-weight: 500;
 }
 
 .about__quote-name {
@@ -402,9 +421,17 @@ body {
   font-weight: 400;
 }
 
+.progress {
+  max-width: 400px;
+}
+
 .progress_background {
   padding: 38px;
   background: linear-gradient(to right, #DDDEDE 0, rgba(255, 255, 255, 0) 100%);
+}
+
+.progress_background .progress__value {
+  min-width: 65%;
 }
 
 .progress__item {
@@ -418,7 +445,7 @@ body {
 }
 
 .progress__value {
-  min-width: 45%;
+  min-width: 55%;
   margin-right: 10px;
   font-family: "PT Serif";
   font-weight: 700;
@@ -435,6 +462,7 @@ body {
 .values {
   position: relative;
   z-index: 1;
+  overflow: hidden;
   background: linear-gradient(180deg, rgb(120, 89, 51), rgb(30, 29, 25));
 }
 
@@ -484,16 +512,6 @@ body {
   z-index: 1;
 }
 
-.item-services:nth-child(even) .item-services__top {
-  flex-direction: row-reverse;
-}
-
-.item-services:nth-child(even) .item-services__preview {
-  margin-right: 0;
-  margin-left: 40px;
-  border-radius: 5px 120px 5px 5px;
-}
-
 .item-services:nth-child(2) {
   background: linear-gradient(180deg, rgb(120, 89, 51), rgb(30, 29, 25));
 }
@@ -524,8 +542,11 @@ body {
 
 .item-services__top {
   display: flex;
-  align-items: flex-start;
   margin-bottom: 35px;
+}
+
+.item-services:nth-child(even) .item-services__top {
+  flex-direction: row-reverse;
 }
 
 .services-list .item-services__top {
@@ -533,9 +554,32 @@ body {
 }
 
 .item-services__preview {
-  margin-right: 40px;
-  max-width: 100%;
+  position: relative;
+  width: 55%;
+  min-height: 255px;
+  margin-right: 60px;
+  overflow: hidden;
   border-radius: 120px 5px 5px 5px;
+}
+
+.item-services:nth-child(even) .item-services__preview {
+  margin-right: 0;
+  margin-left: 40px;
+  border-radius: 5px 120px 5px 5px;
+}
+
+.item-services__preview img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.item-services__info {
+  width: 45%;
 }
 
 .item-services__title {
@@ -606,7 +650,6 @@ body {
 
 .services-list__item {
   display: flex;
-  align-items: flex-start;
   margin-bottom: 80px;
 }
 
@@ -614,14 +657,31 @@ body {
   margin-bottom: 0;
 }
 
+.services-list__preview {
+  position: relative;
+  width: 55%;
+  min-height: 255px;
+  margin-right: 60px;
+  overflow: hidden;
+  border-radius: 120px 5px 5px 5px;
+}
+
 .services-list__item:nth-child(even) .services-list__preview {
   border-radius: 5px 5px 120px 5px;
 }
 
-.services-list__preview {
-  margin-right: 40px;
-  max-width: 100%;
-  border-radius: 120px 5px 5px 5px;
+.services-list__preview img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.services-list__info {
+  width: 45%;
 }
 
 .services-list__title {
@@ -642,14 +702,30 @@ body {
 
 .services-single__header {
   display: flex;
-  align-items: flex-start;
   margin-bottom: 80px;
 }
 
 .services-single__img {
+  position: relative;
+  width: 55%;
+  min-height: 300px;
   margin-right: 60px;
-  max-width: 100%;
+  overflow: hidden;
   border-radius: 120px 5px 5px 5px;
+}
+
+.services-single__img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.services-single__info {
+  width: 45%;
 }
 
 .services-single__text {
@@ -682,7 +758,7 @@ body {
 
 .team__decor {
   position: absolute;
-  right: 50px;
+  right: 4%;
   bottom: 0;
   z-index: -1;
   opacity: 0.25;
@@ -692,7 +768,6 @@ body {
 
 .team__decor_two {
   right: 0;
-  height: 95%;
 }
 
 .team__inner {
@@ -702,11 +777,11 @@ body {
 }
 
 .team__inner_two-by-two {
-  width: 61%;
+  padding-right: 30%;
 }
 
 .team__inner_two-by-two .team__col {
-  flex: 25%;
+  flex: 0 1 50%;
 }
 
 .team__col {
@@ -801,20 +876,38 @@ body {
 
 .team-preview__inner {
   display: flex;
-  align-items: flex-start;
 }
 
 .team-preview__image {
+  position: relative;
+  width: 50%;
+  min-height: 400px;
   margin-right: 90px;
-  max-width: 100%;
+  overflow: hidden;
   border-radius: 60px 5px 5px 5px;
+}
+
+.team-preview__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: center;
+  object-position: center;
+}
+
+.team-preview__info {
+  width: 50%;
 }
 
 .team-preview__title {
   margin-bottom: 25px;
   font-family: "PT Serif";
   font-size: 50px;
-  font-weight: 700px;
+  font-weight: 700;
 }
 
 .team-preview__desc {
@@ -843,12 +936,12 @@ body {
   transition: color linear 0.2s;
 }
 
-.team-preview__link img {
-  margin-right: 5px;
-}
-
 .team-preview__link:hover {
   color: #0AD574;
+}
+
+.team-preview__link img {
+  margin-right: 5px;
 }
 
 .faq__item {
@@ -947,7 +1040,6 @@ body {
 
 .form__wrapper {
   display: flex;
-  align-items: flex-start;
 }
 
 .form__title {
@@ -1025,7 +1117,7 @@ body {
 
 .filters-gallery__item {
   padding: 15px 30px;
-  margin-right: 10px;
+  margin: 5px;
   font-weight: 500;
   cursor: pointer;
   border-radius: 60px;
@@ -1079,6 +1171,9 @@ body {
 }
 
 .footer__logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-right: 10px;
 }
 
@@ -1089,6 +1184,15 @@ body {
 .footer__menu {
   margin-right: 10px;
   color: #fff;
+}
+
+.footer__menu .menu__list {
+  flex-wrap: wrap;
+}
+
+.footer__menu .menu__list li a {
+  display: block;
+  padding: 7px;
 }
 
 .footer__contacts {
@@ -1107,4 +1211,431 @@ body {
 
 .footer__btn {
   margin-bottom: 25px;
+}
+
+@media (max-width: 1200px) {
+  .values__col {
+    flex: 0 1 50%;
+  }
+
+  .services-single__img {
+    margin-right: 30px;
+  }
+
+  .team__inner {
+    margin: -20px;
+  }
+
+  .team__col {
+    padding: 20px;
+  }
+
+  .team-preview__image {
+    margin-right: 45px;
+  }
+
+  .filters-gallery {
+    margin-bottom: 30px;
+    justify-content: flex-start;
+  }
+}
+
+@media (max-width: 992px) {
+  .section-title {
+    font-size: 45px;
+  }
+
+  .contacts-row__item {
+    font-size: 16px;
+  }
+
+  .burger {
+    display: block;
+  }
+
+  .intro__inner {
+    padding: 130px 0 160px;
+  }
+
+  .intro__title {
+    font-size: 60px;
+  }
+
+  .about__left {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .about__img-mobile {
+    display: block;
+  }
+
+  .about__right {
+    display: none;
+  }
+
+  .progress {
+    max-width: 300px;
+  }
+
+  .progress_background {
+    padding: 15px;
+  }
+
+  .progress__value {
+    font-size: 40px;
+  }
+
+  .progress__text {
+    font-size: 16px;
+  }
+
+  .values__icon {
+    width: 70px;
+    height: 70px;
+  }
+
+  .item-services__preview {
+    margin-right: 30px;
+  }
+
+  .item-services__title {
+    font-size: 30px;
+  }
+
+  .item-services__desc {
+    font-size: 18px;
+    line-height: 1.2;
+  }
+
+  .services-list__preview {
+    margin-right: 30px;
+  }
+
+  .services-list__title {
+    font-size: 30px;
+  }
+
+  .services-list__desc {
+    font-size: 18px;
+    line-height: 1.2;
+  }
+
+  .services-single__header {
+    flex-direction: column;
+    margin-bottom: 60px;
+  }
+
+  .services-single__img {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .services-single__info {
+    width: 100%;
+  }
+
+  .services-single__title {
+    font-size: 30px;
+  }
+
+  .team__inner_two-by-two {
+    padding-right: 0;
+  }
+
+  .team-preview__image {
+    margin-right: 30px;
+  }
+
+  .team-preview__title {
+    margin-bottom: 15px;
+  }
+
+  .team-preview__desc {
+    margin-bottom: 15px;
+  }
+
+  .team-preview__link {
+    margin-bottom: 30px;
+  }
+
+  .gallery__col {
+    flex: 0 1 50%;
+  }
+}
+
+@media (max-width: 768px) {
+  .page__section {
+    padding: 30px 0 50px;
+  }
+
+  .contacts-row__inner {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 30px;
+  }
+
+  .contacts-row__item {
+    margin-bottom: 70px;
+    font-size: 28px;
+  }
+
+  .contacts-row__item:last-child {
+    margin-bottom: 0;
+  }
+
+  .intro__inner {
+    padding: 100px 0 140px;
+  }
+
+  .intro__title {
+    font-size: 40px;
+  }
+
+  .values {
+    padding-bottom: 300px;
+  }
+
+  .values__decor {
+    bottom: -100px;
+    max-width: 80%;
+  }
+
+  .values__col {
+    flex: 1 1 100%;
+  }
+
+  .item-services__top {
+    flex-direction: column;
+  }
+
+  .item-services:nth-child(even) .item-services__top {
+    flex-direction: column;
+  }
+
+  .item-services__preview {
+    width: 100%;
+    margin-bottom: 15px;
+    border-radius: 80px 5px 5px 5px;
+  }
+
+  .item-services:nth-child(even) .item-services__preview {
+    margin: 0 0 15px 0;
+    border-radius: 5px 80px 5px 5px;
+  }
+
+  .item-services__info {
+    width: 100%;
+    text-align: center;
+  }
+
+  .item-services__bottom {
+    display: none;
+  }
+
+  .services-list::before {
+    display: none;
+  }
+
+  .services-list {
+    padding: 40px;
+  }
+
+  .services-list__wrapper {
+    margin-bottom: 40px;
+    padding-left: 0;
+  }
+
+  .services-list__item {
+    flex-direction: column;
+    margin-bottom: 50px;
+  }
+
+  .services-list__preview {
+    width: 100%;
+    margin-bottom: 15px;
+    border-radius: 80px 5px 5px 5px;
+  }
+
+  .services-list__item:nth-child(even) .services-list__preview {
+    margin: 0 0 15px 0;
+    border-radius: 5px 5px 80px 5px;
+  }
+
+  .services-list__info {
+    width: 100%;
+    text-align: center;
+  }
+
+  .services-single__text {
+    font-size: 16px;
+    line-height: 1.3;
+  }
+
+  .services-single__title {
+    font-size: 24px;
+  }
+
+  .team__col {
+    flex: 0 1 50%;
+  }
+
+  .team-preview__inner {
+    flex-direction: column;
+  }
+
+  .team-preview__image {
+    width: 100%;
+    min-height: 500px;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .team-preview__info {
+    width: 100%;
+  }
+
+  .team-preview__title {
+    font-size: 35px;
+  }
+
+  .team-preview__desc {
+    font-size: 16px;
+  }
+
+  .team-preview__text {
+    font-size: 16px;
+  }
+
+  .faq__control {
+    font-size: 16px;
+    padding: 15px;
+  }
+
+  .faq__content {
+    font-size: 14px;
+  }
+
+  .form__wrapper {
+    flex-direction: column;
+  }
+
+  .form__input-area {
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+
+  .footer__inner {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .footer__logo {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .footer__logo-img {
+    margin-bottom: 15px;
+  }
+
+  .footer__socials .socials__item {
+    margin-right: 25px;
+  }
+
+  .footer__socials .socials__item:last-child {
+    margin-right: 0;
+  }
+
+  .footer__menu {
+    margin-right: 0;
+    margin-bottom: 25px;
+  }
+
+  .footer__menu .menu__list {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .footer__menu .menu__list li {
+    margin-right: 0;
+    font-size: 14px;
+  }
+
+  .footer__contacts {
+    align-items: center;
+  }
+}
+
+@media (max-width: 575px) {
+  .section-title {
+    font-size: 30px;
+  }
+
+  .intro__inner {
+    padding: 60px 0 400px;
+  }
+
+  .intro__title {
+    text-align: center;
+  }
+
+  .about__desc {
+    font-size: 16px;
+  }
+
+  .about__quote {
+    font-size: 14px;
+  }
+
+  .item-services__title {
+    font-size: 18px;
+  }
+
+  .item-services__title {
+    font-size: 16px;
+  }
+
+  .services-list__title {
+    font-size: 18px;
+  }
+
+  .services-list__title {
+    font-size: 16px;
+  }
+
+  .team {
+    padding-bottom: 400px;
+  }
+
+  .team__decor {
+    max-width: 85%;
+  }
+
+  .team__inner_two-by-two .team__col {
+    flex: 0 1 auto;
+  }
+
+  .team__col {
+    flex: 0 1 auto;
+  }
+
+  .team-preview__image {
+    min-height: 350px;
+  }
+
+  .form__casing {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .form__group {
+    flex: 0 1 100%;
+  }
+
+  .gallery__col {
+    flex: 0 1 100%;
+  }
 }
