--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,6 +317,8 @@ body {
 }
 
 .header__wrapper {
+  position: relative;
+  z-index: 999;
   background-color: #f4f4f4;
 }
 
@@ -326,7 +328,6 @@ body {
   top: 0;
   right: 0;
   left: 0;
-  z-index: 999;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
